# codebugs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: 2026-04-04-blockers-design.md
docs/diagrams/: codesweep-lifecycle.excalidraw  codesweep-upsert-archive.excalidraw
docs/superpowers/plans/: 2026-04-05-provenance.md  2026-04-06-cli-unification.md  2026-04-06-entity-types.md  2026-04-06-schema-registry.md  2026-04-06-tool-registry.md  2026-05-11-milestones-streams.md
docs/superpowers/specs/: 2026-04-05-provenance-design.md  2026-04-06-cli-unification-design.md  2026-04-06-embedding-separation-design.md  2026-04-06-entity-types-design.md  2026-04-06-schema-registry-design.md  2026-04-06-tool-registry-design.md  2026-05-18-findings-provenance-hybrid.md
src/codebugs/: __init__.py  bench.py  blockers.py  cli.py  db.py  embeddings.py  findings.py  fmt.py  merge.py  milestones.py  provenance.py  reqs.py  server.py  sweep.py  types.py
tests/: dump_schema.py  test_bench.py  test_blockers.py  test_boundary.py  test_db.py  test_db_infra.py  test_embeddings.py  test_findings.py  test_merge.py  test_milestones.py  test_provenance.py  test_registry.py  test_reqs.py  test_staleness.py  test_sweep.py  test_types.py
tests/golden/: mcp_schema.json
